# gtk-scaffold-cpp

./: .gitignore  README.md  meson.build
src/: app_window.cpp  app_window.h  app_window_builder.cpp  application.cpp  application.h  details_list.cpp  details_list.h  details_row.cpp  details_row.h  main.cpp  meson.build
